2013-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/58564
	* fold-const.c (fold_ternary_loc): For A < 0 : <sign bit of A> : 0
	optimization, punt if sign_bit_p looked through any zero extension.

2013-09-30  Teresa Johnson  <tejohnson@google.com>

	* tree-ssa-threadupdate.c (ssa_fix_duplicate_block_edges):
	Update redirected out edge count in joiner case.
	(ssa_redirect_edges): Common the joiner and non-joiner cases
	so that joiner case gets profile updates.

2013-09-30  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58554
	* tree-loop-distribution.c (classify_partition): Require unconditionally
	executed stores for memcpy and memset recognition.
	(tree_loop_distribution): Calculate dominance info.

2013-09-30  Venkataramanan Kumar  <venkataramanan.kumar@linaro.org>

	* config/aarch64/aarch64.h (MCOUNT_NAME): Define.
	(NO_PROFILE_COUNTERS): Likewise.
	(PROFILE_HOOK): Likewise.
	(FUNCTION_PROFILER): Likewise.
	* config/aarch64/aarch64.c (aarch64_function_profiler): Remove.

2013-09-30  Iain Sandoe  <iain@codesourcery.com>

	* config/rs6000/darwin.md (load_macho_picbase_si): Wrap machopic
	calls and defines in TARGET_MACHO conditional.
	(load_macho_picbase_di): Likewise.
	(reload_macho_picbase): Likewise.
	(reload_macho_picbase_si): Likewise.
	(reload_macho_picbase_di): Likewise.
	(nonlocal_goto_receiver): Likewise.

2013-09-30  Nick Clifton  <nickc@redhat.com>

	* config/msp430/msp430.c (msp430x_names): New array.  Lists MCUs
	that use the MSP430X ISA.
	(msp430_option_override): Scan -mmcu command line option for any
	MCU name that supports the MSP430X ISA.
	* config/msp430/t-msp430 (MULTILIB_MATCHES): Add matches for known
	-mmcu options which enable the MSP430X ISA.

2013-09-30  Richard Biener  <rguenther@suse.de>

	PR middle-end/58532
	* tree-cfg.c (make_abnormal_goto_edges): Skip debug statements
	before looking for setjmp-like calls.

2013-09-29  Iain Sandoe  <iain@codesourcery.com>

	PR target/10901